# sentinel3-burned-area

./: .gitignore  README.md  pyproject.toml
src/: clip_files.py  download.py
src/sentinel3_burned_area/: __init__.py  cli.py  download.py  models.py  processing.py
