[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel3-burned-area"
version = "0.1.0"
description = "CLI and Python package to clip Copernicus Sentinel-3 monthly burned-area products over an area of interest"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "geopandas>=0.14",
  "numpy>=1.24",
  "pandas>=2.0",
  "rasterio>=1.3",
  "xarray>=2023.1",
]

[project.scripts]
sentinel3-ba = "sentinel3_burned_area.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sentinel3_burned_area*"]
